 ══════════
   Main App (v3.1.0.0)
   September 24th, 2019
 ══════════
  • FIXED: Notifications device support

 ══════════
   Actions App (v3.1.0.0)
   September 24th, 2019
 ══════════
  • FIXED: Minor bug fixes.

 ══════════
   Device (v3.1.0.0)
   September 24th, 2019
 ══════════
  • FIXED: Minor bug fixes.